[gd_scene load_steps=10 format=2]

[ext_resource path="res://enemies/BaseEnemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemies/laser_ufo/LaserUfo.gd" type="Script" id=2]
[ext_resource path="res://resources/stats/laser_ufo/laser_ufo_base_stats.tres" type="Resource" id=3]
[ext_resource path="res://assets/ufo/ufoYellow.png" type="Texture" id=4]
[ext_resource path="res://enemies/laser_ufo/LaserUfoShield.gd" type="Script" id=5]
[ext_resource path="res://assets/ufo/shield2.png" type="Texture" id=6]
[ext_resource path="res://enemies/laser_ufo/states/Fly.gd" type="Script" id=7]
[ext_resource path="res://enemies/laser_ufo/states/Attack.gd" type="Script" id=8]
[ext_resource path="res://weapons/laser/Laser.tscn" type="PackedScene" id=9]

[node name="LaserUfo" instance=ExtResource( 1 )]
script = ExtResource( 2 )
base_stats = ExtResource( 3 )

[node name="Sprite" parent="." index="1"]
editor/display_folded = true
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )

[node name="LaserUfoShield" type="Area2D" parent="Sprite" index="0"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Sprite/LaserUfoShield" index="0"]
position = Vector2( 0, -15 )
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite/LaserUfoShield" index="1"]
polygon = PoolVector2Array( -54.0106, 43.3132, -47.1832, 38.9241, -57.4244, 18.4417, -58.3997, -4.47899, -55.4737, -18.6216, -45.2325, -33.7395, -34.5036, -45.4437, -18.3996, -53.8278, 1.95751, -56.2227, 16.9259, -53.8278, 25.7022, -50.1639, 35.9434, -43.8241, 47.6476, -33.0952, 53.012, -23.3417, 56.9134, -9.68684, 58.8641, 3.96807, 57.4011, 14.2092, 55.4504, 24.4504, 49.5983, 32.2532, 48.1353, 36.6423, 47.6476, 41.7439, 53.012, 43.6945, 59.8395, 37.8424, 70.5683, 16.2242, 71.056, 5.49532, 71.5437, -11.0856, 67.1546, -26.2036, 56.4258, -45.7106, 46.6723, -57.9024, 32.5297, -65.7052, 13.998, -73.0204, -1.1199, -73.508, -21.6022, -71.5573, -40.6216, -61.6162, -51.8381, -53.3258, -59.6409, -41.1339, -68.4191, -25.0406, -69.8821, -9.43501, -70.8574, 4.70757, -69.3944, 20.3132, -62.5669, 34.4557 )

[node name="Tween" type="Tween" parent="Sprite/LaserUfoShield" index="2"]

[node name="Timer" type="Timer" parent="Sprite/LaserUfoShield" index="3"]
one_shot = true
autostart = true

[node name="CollisionPolygon2D" parent="." index="2"]
scale = Vector2( 0.8, 0.8 )
polygon = PoolVector2Array( 0.220322, -44.8126, 14.5823, -43.4228, 25.238, -37.8633, 35.8937, -28.5975, 41.9165, -17.0152, 45.1595, -5.43288, 44.6963, 10.319, 39.1368, 22.3646, 29.871, 34.8735, 16.4355, 41.3595, 4.85323, 45.9924, -11.8253, 43.676, -27.1139, 37.1899, -41.4759, 20.0481, -44.7189, 1.97977, -43.7924, -13.7721, -34.9898, -29.9873, -26.1873, -36.9367, -15.5316, -43.4228 )

[node name="States" parent="." index="3"]
editor/display_folded = true

[node name="Fly" type="Node" parent="States" index="0"]
script = ExtResource( 7 )

[node name="Attack" type="Node" parent="States" index="1"]
script = ExtResource( 8 )

[node name="LaserContainer" type="Node2D" parent="." index="5"]

[node name="Laser" parent="LaserContainer" index="0" instance=ExtResource( 9 )]
position = Vector2( 0, -45 )
rotation = -1.5708

[node name="Laser2" parent="LaserContainer" index="1" instance=ExtResource( 9 )]
position = Vector2( 45, 0 )

[node name="Laser3" parent="LaserContainer" index="2" instance=ExtResource( 9 )]
position = Vector2( 0, 45 )
rotation = 1.5708

[node name="Laser4" parent="LaserContainer" index="3" instance=ExtResource( 9 )]
position = Vector2( -45, 0 )
rotation = 3.14159

[node name="EnemyGui" parent="." index="6"]
margin_left = -27.6952
margin_top = -53.6035
margin_right = 163.304
margin_bottom = -4.60349
rect_scale = Vector2( 0.3, 0.3 )
[connection signal="area_entered" from="." to="." method="_on_LaserUfo_area_entered"]
[connection signal="area_entered" from="Sprite/LaserUfoShield" to="Sprite/LaserUfoShield" method="_on_LaserUfoShield_area_entered"]
[connection signal="shield_disolved" from="Sprite/LaserUfoShield" to="States/Attack" method="_on_LaserUfoShield_shield_disolved"]
[connection signal="timeout" from="Sprite/LaserUfoShield/Timer" to="Sprite/LaserUfoShield" method="_on_Timer_timeout"]
